--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <H1> 
         NGUYỄN MẠNH CƯỜNG
     </H1>
-    <script src="main.js"></script>
+    <script src="map.js"></script>
 </body>
 </html>
